# polkadot-events

./: .gitignore  README.md  index.html  package.json  prepare.js
.github/workflows/: deploy.yml
backend-rust/: Cargo.toml
backend-rust/src/: ffi.rs  lib.rs  network_service.rs  sync_service.rs
backend-rust/src/ffi/: bindings.rs
src/: index.html  index.js  kusama.json  smoldot.js  worker.js
src/components/: AccountInput.jsx  AccountViewer.jsx  App.jsx  Event.jsx  EventsList.jsx  Header.jsx  NodeState.jsx  SyncingState.jsx
src/smoldot/: bindings-smoldot-js.js  bindings-smoldot.js  compat-nodejs.js  index.js  worker.js
