[package]
name = "polkadot-events-js"
version = "0.1.3"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Browser bindings to a light client for Substrate-based blockchains"
repository = "https://github.com/paritytech/smoldot"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99.11"
fnv = { version = "1.0.7", default-features = false }
futures = "0.3.13"
hashbrown = { version = "0.9.1", default-features = false }
log = { version = "0.4.14", features = ["std"] }
rand = "0.8.3"
serde = "1.0.124"
serde_json = "1.0.64"
smoldot = { version = "0.1.0", default-features = false }
